--- a/1.html
+++ b/1.html
@@ -1,11 +1,8 @@
-<<title>Wansa-Test</title>
-<meta charset="utf-8"
-
-hello <stong>web</strong>
-<h1>HTML이란 무엇인
-
-  hello My name is <strong>Lee hyun jin</strong>Lee hyun jin
-<<table>
-  <td>head</td>
-
-</table>
+<!<!DOCTYPE html>
+<html>
+<head>
+  <meta charst="utf-8">
+</head>
+<body>
+  <input type="text" value="white"/>
+</body>
